--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@ h3:hover {
 <body>
 <!-- partial:index.partial.html -->
 <div class="box">
-<h3>Air Startup Club</h3><br><p>Coming Soon</p></div>
+<h3>Air Startup Club</h3></div>
 <!-- partial -->
 </body></html>
